--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div id="div-1" class="col-md-5 col-sm-12 col-xs-12">
             <h4>Snapshot - </h4>
             <div id="snapshot-div"></div>
-            <button id="emotion-predict">Predict Emotion</button>
+            <button id="emotion-predict" onclick="check();">Predict Hand Gesture</button>
             <br>
           </div>
 
